--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,12 +22,37 @@ body {
     border: 1px solid #ddd;
 }
 
+.cli a {
+    color: #428bca;
+}
+
 .post-container {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
-    padding: 30px 50px 50px 50px;
+    width: 70%;
+    padding: 30px;
+}
+
+.post-container h2{
+    display: block;
+    margin-top: 10px;
+    font-size: 32px;
+    font-family: 'Microsoft YaHei',Verdana,"BitStream vera Sans";
+    /*background: #EEE;*/
+    /*background-color: #f8f8f8;*/
+}
+
+.post-container h4{
+    color: #080;
+    /*margin: 40px 0px 10px 0px;*/
+    border-left: green solid thick;
+    padding: 10px 0px 10px 10px;
+    background-color: #f8f8f8;
+}
+
+.post-container h5{
+    color: red;
 }
 
 .post-blog {
